fix svg transformorigin on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2172,7 +2172,7 @@ body.nav-open {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: -10px;
-  padding: 0; }
+  padding-bottom: 30px; }
   .grid-flex-wrapper .card {
     -ms-flex-preferred-size: calc(100% - 20px);
         flex-basis: calc(100% - 20px);
@@ -2485,6 +2485,7 @@ svg:not(:root) {
   overflow: visible; }
 
 .svg {
+  position: relative;
   display: block;
   width: 1em;
   height: 1em;
