--- a/src/styles/layouts/_page.scss
+++ b/src/styles/layouts/_page.scss
@@ -203,7 +203,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: -10px;
-  padding: 0;
+  padding-bottom: 30px;
   .card {
     flex-basis: calc(100% - 20px);
     margin: 10px;
